# EECS-582

./: .env-sample  .gitattributes  .gitignore  Dockerfile.auth  Dockerfile.products  Pulumi.dev.yaml  Pulumi.yaml  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  grocerywise.code-workspace  index.ts  init-db.sql  package.json
.github/workflows/: build-backend.yml  build.backend.yml  lint-py.yml  lint-rust.yml  lint-web.yml  lint.gateway.yml  lint.py.yml  lint.rust.yml  lint.web.yml  test-rust.yml  test.rust.yml  test.web.yml
auth/: .env-sample  Cargo.toml  README.md
auth/migrations/2025-02-06-015434_initial/: up.sql
auth/migrations/2025-02-06-031553_add_cody/: down.sql  up.sql
auth/migrations/2025-02-07-044744_roll_auth/: down.sql
auth/src/: errors.rs  handlers.rs  lib.rs  main.rs  schema.rs  seed.rs  validator.rs
auth/src/handlers/auth/: login.rs  mod.rs  register.rs
auth/src/handlers/users/: get_user.rs  get_users.rs  mod.rs
auth/src/models/: mod.rs  permission.rs  user.rs
backend/auth/: Cargo.toml  README.md  rustfmt.toml
backend/auth/migrations/2025-02-06-015434_initial/: down.sql  up.sql
backend/auth/migrations/2025-02-07-044744_roll_auth/: up.sql
backend/auth/migrations/2025-02-14-145401_add_permissions_to_products/: down.sql  up.sql
backend/auth/migrations/2025-02-26-201736_username_optional/: down.sql  up.sql
backend/auth/migrations/2025-04-13-172540_add_crud_users/: down.sql  up.sql
backend/auth/src/: errors.rs  lib.rs  main.rs  schema.rs  seed.rs  validator.rs
backend/auth/src/handlers/: mod.rs  users.rs
backend/auth/src/handlers/auth/: login.rs  mod.rs  refresh.rs  register.rs
backend/auth/src/handlers/users/: get_user.rs  get_users.rs  mod.rs
backend/auth/src/models/: mod.rs  permission.rs  role.rs  role_to_permission.rs  user.rs  user_to_role.rs
backend/gateway/: .env-sample  Dockerfile.local  README.md  eslint.config.mjs  gateway.config.ts  mesh.config.ts  (+3 more)
products/: .env-sample  Cargo.toml  README.md
schemas/: README.md  product_external.schema.json  products_external.schema.json
tooling/schema-gen/: Cargo.toml  README.md
tooling/schema-gen/src/: get_schemas.rs  main.rs
(+174 files in other folders)
