[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
env_logger = "0.11.6"
serde = "1.0.217"
serde_derive = "1.0.217"
utoipa-actix-web = "0.1.2"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
