[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
common-rs = { path = "../../packages/common-rs/", features = ["all"] }
validator-rs = { path = "../../packages/validator-rs/", features = ["actix-web"] }

actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2", "numeric"] }
dotenvy = "0.15"
serde = "1.0.217"
utoipa-actix-web = "0.1.2"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
simple_logger = "5.0.0"
log = "0.4.25"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
actix-web-httpauth = "0.8.2"
serde_json = "1.0.138"
bcrypt = "0.17.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
bigdecimal = { version = "0.4.7", features = ["serde", "serde-json"] }
actix-cors = "0.7.0"
bon = "3.3.2"
anyhow = "1.0.96"
